--- a/server/homeassistant/config/include/sensors.yaml
+++ b/server/homeassistant/config/include/sensors.yaml
@@ -14,279 +14,261 @@
 # ───────────────────────────────────────────────────────────────────────────── #
 
 
-# ─────────────────────────────── S-LIGHT-01 [Light] ────────────────────────── #
-- name:                "S-LIGHT-01 [Light]"
-  unique_id:           "S-LIGHT-01_LIGHT"
-  state_topic:         "dt/gf/slight01/res"
-  value_template:      "{{ value_json['fields'].illuminance }}"
+# ─────────────────────────────── S-LIGHT-01 ─────────────────────────────── #
+- name: "Light Sensor 01 [Illuminance]"
+  unique_id: "S-LIGHT-01_LIGHT"
+  state_topic: "dt/gf/slight01/res"
+  value_template: "{{ value_json['fields'].illuminance }}"
   unit_of_measurement: "lx"
-  icon:                "mdi:brightness-5"
-# ───────────────────────────────────────────────────────────────────────────── #
+  icon: "mdi:brightness-5"
 
-
-# ──────────────────────────────── S-PAR-02 [PAR] ───────────────────────────── #
-- name:                "S-PAR-02 [PAR]"
-  unique_id:           "S-PAR-02_PAR"
-  state_topic:         "dt/gf/spar02/res"
-  value_template:      "{{ value_json['fields'].par }}"
+# ─────────────────────────────── S-PAR-02 ─────────────────────────────── #
+- name: "PAR Sensor 02 [PAR]"
+  unique_id: "S-PAR-02_PAR"
+  state_topic: "dt/gf/spar02/res"
+  value_template: "{{ value_json['fields'].par }}"
   unit_of_measurement: "µmol/m²/s"
-  icon:                "mdi:weather-sunny"
-# ───────────────────────────────────────────────────────────────────────────── #
+  icon: "mdi:white-balance-sunny"
 
-
-# ──────────────── S-EC-01-1 [Electro Conductivity, Temp & TDS] ─────────────── #
-- name:                "S-EC-01-1 [EC]"
-  unique_id:           "S-EC-01-1_EC"
-  state_topic:         "dt/gf/sec01/1/res"
-  value_template:      "{{ value_json['fields'].ec }}"
+# ─────────────── S-EC-01-1 ─────────────── #
+- name: "EC Sensor 01-1 [EC]"
+  unique_id: "S-EC-01-1_EC"
+  state_topic: "dt/gf/sec01/1/res"
+  value_template: "{{ value_json['fields'].ec }}"
   unit_of_measurement: "µS/cm"
-  icon:                "mdi:electron-framework"
+  icon: "mdi:flash"
 
-- name:                "S-EC-01-1 [Temperature]"
-  unique_id:           "S-EC-01-1_TEMP"
-  state_topic:         "dt/gf/sec01/1/res"
-  value_template:      "{{ value_json['fields'].temperature }}"
+- name: "EC Sensor 01-1 [Temperature]"
+  unique_id: "S-EC-01-1_TEMP"
+  state_topic: "dt/gf/sec01/1/res"
+  value_template: "{{ value_json['fields'].temperature }}"
   unit_of_measurement: "°C"
-  icon:                "mdi:thermometer"
+  icon: "mdi:thermometer"
 
-- name:                "S-EC-01-1 [TDS]"
-  unique_id:           "S-EC-01-1_TDS"
-  state_topic:         "dt/gf/sec01/1/res"
-  value_template:      "{{ value_json['fields'].tds }}"
+- name: "EC Sensor 01-1 [TDS]"
+  unique_id: "S-EC-01-1_TDS"
+  state_topic: "dt/gf/sec01/1/res"
+  value_template: "{{ value_json['fields'].tds }}"
   unit_of_measurement: "mg/L"
-  icon:                "mdi:water"
+  icon: "mdi:water"
 
-- name:                "EC Sensor 1 [Calibration]"
-  unique_id:           "S-EC-01-1_CALIBRATION"
-  state_topic:         "dt/gf/sec01/1/res"
-  value_template:      "{{ (value_json['fields'].calibrated if value_json['fields'].calibrated != 0 else '1970-01-01T00:00:00Z') | as_timestamp | round(0) }}"
+- name: "EC Sensor 01-1 [Calibration]"
+  unique_id: "S-EC-01-1_CALIBRATION"
+  state_topic: "dt/gf/sec01/1/res"
+  value_template: "{{ (value_json['fields'].calibrated if value_json['fields'].calibrated != 0 else '1970-01-01T00:00:00Z') | as_timestamp | round(0) }}"
   unit_of_measurement: "timestamp"
-  icon:                "mdi:electron-framework"
-# ───────────────────────────────────────────────────────────────────────────── #
+  icon: "mdi:calendar-clock"
 
-# ─────────────── S-EC-01-2 [Electro Conductivity, Temp & TDS] ──────────────── #
-- name:                "S-EC-01-2 [EC]"
-  unique_id:           "S-EC-01-2_EC"
-  state_topic:         "dt/gf/sec01/2/res"
-  value_template:      "{{ value_json['fields'].ec }}"
+# ─────────────── S-EC-01-2 ─────────────── #
+- name: "EC Sensor 01-2 [EC]"
+  unique_id: "S-EC-01-2_EC"
+  state_topic: "dt/gf/sec01/2/res"
+  value_template: "{{ value_json['fields'].ec }}"
   unit_of_measurement: "µS/cm"
-  icon:                "mdi:electron-framework"
+  icon: "mdi:flash"
 
-- name:                "S-EC-01-2 [Temperature]"
-  unique_id:           "S-EC-01-2_TEMP"
-  state_topic:         "dt/gf/sec01/2/res"
-  value_template:      "{{ value_json['fields'].temperature }}"
+- name: "EC Sensor 01-2 [Temperature]"
+  unique_id: "S-EC-01-2_TEMP"
+  state_topic: "dt/gf/sec01/2/res"
+  value_template: "{{ value_json['fields'].temperature }}"
   unit_of_measurement: "°C"
-  icon:                "mdi:thermometer"
+  icon: "mdi:thermometer"
 
-- name:                "S-EC-01-2 [TDS]"
-  unique_id:           "S-EC-01-2_TDS"
-  state_topic:         "dt/gf/sec01/2/res"
-  value_template:      "{{ value_json['fields'].tds }}"
+- name: "EC Sensor 01-2 [TDS]"
+  unique_id: "S-EC-01-2_TDS"
+  state_topic: "dt/gf/sec01/2/res"
+  value_template: "{{ value_json['fields'].tds }}"
   unit_of_measurement: "mg/L"
-  icon:                "mdi:water"
+  icon: "mdi:water"
 
-- name:                "EC Sensor 2 [Calibration]"
-  unique_id:           "S-EC-01-2_CALIBRATION"
-  state_topic:         "dt/gf/sec01/2/res"
-  value_template:      "{{ (value_json['fields'].calibrated if value_json['fields'].calibrated != 0 else '1970-01-01T00:00:00Z') | as_timestamp | round(0) }}"
+- name: "EC Sensor 01-2 [Calibration]"
+  unique_id: "S-EC-01-2_CALIBRATION"
+  state_topic: "dt/gf/sec01/2/res"
+  value_template: "{{ (value_json['fields'].calibrated if value_json['fields'].calibrated != 0 else '1970-01-01T00:00:00Z') | as_timestamp | round(0) }}"
   unit_of_measurement: "timestamp"
-  icon:                "mdi:electron-framework"
-# ───────────────────────────────────────────────────────────────────────────── #
+  icon: "mdi:calendar-clock"
 
-
-# ───────────────────────── S-PH-01-1 [pH & Temperature] ────────────────────── #
-- name:                "S-PH-01-1 [pH]"
-  unique_id:           "S-PH-01-1_PH"
-  state_topic:         "dt/gf/sph01/1/res"
-  value_template:      "{{ value_json['fields'].ph }}"
+# ─────────────── S-PH-01-1 ─────────────── #
+- name: "pH Sensor 01-1 [pH]"
+  unique_id: "S-PH-01-1_PH"
+  state_topic: "dt/gf/sph01/1/res"
+  value_template: "{{ value_json['fields'].ph }}"
   unit_of_measurement: "pH"
-  icon:                "mdi:ph"
+  icon: "mdi:ph"
 
-- name:                "S-PH-01-1 [Temperature]"
-  unique_id:           "S-PH-01-1_TEMP"
-  state_topic:         "dt/gf/sph01/1/res"
-  value_template:      "{{ value_json['fields'].temperature }}"
+- name: "pH Sensor 01-1 [Temperature]"
+  unique_id: "S-PH-01-1_TEMP"
+  state_topic: "dt/gf/sph01/1/res"
+  value_template: "{{ value_json['fields'].temperature }}"
   unit_of_measurement: "°C"
-  icon:                "mdi:thermometer"
+  icon: "mdi:thermometer"
 
-- name:                "pH Sensor 1 [Calibration]"
-  unique_id:           "S-PH-01-1_CALIBRATION"
-  state_topic:         "dt/gf/sph01/1/res"
-  value_template:      "{{ (value_json['fields'].calibrated if value_json['fields'].calibrated != 0 else '1970-01-01T00:00:00Z') | as_timestamp | round(0) }}"
+- name: "pH Sensor 01-1 [Calibration]"
+  unique_id: "S-PH-01-1_CALIBRATION"
+  state_topic: "dt/gf/sph01/1/res"
+  value_template: "{{ (value_json['fields'].calibrated if value_json['fields'].calibrated != 0 else '1970-01-01T00:00:00Z') | as_timestamp | round(0) }}"
   unit_of_measurement: "timestamp"
-  icon:                "mdi:ph"
-# ───────────────────────────────────────────────────────────────────────────── #
+  icon: "mdi:calendar-clock"
 
-# ─────────────────────────── S-PH-01-2 [pH & Temperature] ───────────────────── #
-- name:                "S-PH-01-2 [pH]"
-  unique_id:           "S-PH-01-2_PH"
-  state_topic:         "dt/gf/sph01/2/res"
-  value_template:      "{{ value_json['fields'].ph }}"
+# ─────────────── S-PH-01-2 ─────────────── #
+- name: "pH Sensor 01-2 [pH]"
+  unique_id: "S-PH-01-2_PH"
+  state_topic: "dt/gf/sph01/2/res"
+  value_template: "{{ value_json['fields'].ph }}"
   unit_of_measurement: "pH"
-  icon:                "mdi:ph"
+  icon: "mdi:ph"
 
-- name:                "S-PH-01-2 [Temperature]"
-  unique_id:           "S-PH-01-2_TEMP"
-  state_topic:         "dt/gf/sph01/2/res"
-  value_template:      "{{ value_json['fields'].temperature }}"
+- name: "pH Sensor 01-2 [Temperature]"
+  unique_id: "S-PH-01-2_TEMP"
+  state_topic: "dt/gf/sph01/2/res"
+  value_template: "{{ value_json['fields'].temperature }}"
   unit_of_measurement: "°C"
-  icon:                "mdi:thermometer"
+  icon: "mdi:thermometer"
 
-- name:                "pH Sensor 2 [Calibration]"
-  unique_id:           "S-PH-01-2_CALIBRATION"
-  state_topic:         "dt/gf/sph01/2/res"
-  value_template:      "{{ (value_json['fields'].calibrated if value_json['fields'].calibrated != 0 else '1970-01-01T00:00:00Z') | as_timestamp | round(0) }}"
+- name: "pH Sensor 01-2 [Calibration]"
+  unique_id: "S-PH-01-2_CALIBRATION"
+  state_topic: "dt/gf/sph01/2/res"
+  value_template: "{{ (value_json['fields'].calibrated if value_json['fields'].calibrated != 0 else '1970-01-01T00:00:00Z') | as_timestamp | round(0) }}"
   unit_of_measurement: "timestamp"
-  icon:                "mdi:ph"
-# ───────────────────────────────────────────────────────────────────────────── #
+  icon: "mdi:calendar-clock"
 
 
-# ───────────────────── CO2_VOC_1 [Temp, RH, CO2, DP, Flow] ─────────────────── #
-- name:                "CO2_VOC_1 [Temperature]"
-  unique_id:           "CO2_VOC_1_TEMP"
-  state_topic:         "dt/gf/CO2VOC/1/res"
-  value_template:      "{{ value_json['fields'].temperature }}"
+
+# ─────────────── CO2_VOC_1 ─────────────── #
+- name: "CO2/VOC Sensor 01 [Temperature]"
+  unique_id: "CO2_VOC_1_TEMP"
+  state_topic: "dt/gf/CO2VOC/1/res"
+  value_template: "{{ value_json['fields'].temperature }}"
   unit_of_measurement: "°C"
-  icon:                "mdi:thermometer"
+  icon: "mdi:thermometer"
 
-- name:                "CO2_VOC_1 [Humidity]"
-  unique_id:           "CO2_VOC_1_RH"
-  state_topic:         "dt/gf/CO2VOC/1/res"
-  value_template:      "{{ value_json['fields'].humidity }}"
+- name: "CO2/VOC Sensor 01 [Humidity]"
+  unique_id: "CO2_VOC_1_RH"
+  state_topic: "dt/gf/CO2VOC/1/res"
+  value_template: "{{ value_json['fields'].humidity }}"
   unit_of_measurement: "%[RH]"
-  icon:                "mdi:water-percent"
+  icon: "mdi:water-percent"
 
-- name:                "CO2_VOC_1 [CO2]"
-  unique_id:           "CO2_VOC_1_CO2"
-  state_topic:         "dt/gf/CO2VOC/1/res"
-  value_template:      "{{ value_json['fields'].co2 }}"
+- name: "CO2/VOC Sensor 01 [CO2]"
+  unique_id: "CO2_VOC_1_CO2"
+  state_topic: "dt/gf/CO2VOC/1/res"
+  value_template: "{{ value_json['fields'].co2 }}"
   unit_of_measurement: "ppm"
-  icon:                "mdi:smoke"
+  icon: "mdi:molecule-co2"
 
-- name:                "CO2_VOC_1 [Dewpoint]"
-  unique_id:           "CO2_VOC_1_DP"
-  state_topic:         "dt/gf/CO2VOC/1/res"
-  value_template:      "{{ value_json['fields'].dewpoint }}"
+- name: "CO2/VOC Sensor 01 [Dewpoint]"
+  unique_id: "CO2_VOC_1_DP"
+  state_topic: "dt/gf/CO2VOC/1/res"
+  value_template: "{{ value_json['fields'].dewpoint }}"
   unit_of_measurement: "°C"
-  icon:                "mdi:thermometer-water"
+  icon: "mdi:thermometer-water"
 
-- name:                "CO2_VOC_1 [Volume Flow]"
-  unique_id:           "CO2_VOC_1_VF"
-  state_topic:         "dt/gf/CO2VOC/1/res"
-  value_template:      "{{ value_json['fields'].volumeFlow }}"
+- name: "CO2/VOC Sensor 01 [Volume Flow]"
+  unique_id: "CO2_VOC_1_VF"
+  state_topic: "dt/gf/CO2VOC/1/res"
+  value_template: "{{ value_json['fields'].volumeFlow }}"
   unit_of_measurement: "m3/s"
-  icon:                "mdi:air-filter"
-# ───────────────────────────────────────────────────────────────────────────── #
+  icon: "mdi:air-filter"
 
-# ────────────────────── CO2_VOC_2 [Temp, RH, CO2, DP, Flow] ────────────────── #
-- name:                "CO2_VOC_2 [Temperature]"
-  unique_id:           "CO2_VOC_2_TEMP"
-  state_topic:         "dt/gf/CO2VOC/2/res"
-  value_template:      "{{ value_json['fields'].temperature }}"
+# ─────────────── CO2_VOC_2 ─────────────── #
+- name: "CO2/VOC Sensor 02 [Temperature]"
+  unique_id: "CO2_VOC_2_TEMP"
+  state_topic: "dt/gf/CO2VOC/2/res"
+  value_template: "{{ value_json['fields'].temperature }}"
   unit_of_measurement: "°C"
-  icon:                "mdi:thermometer"
+  icon: "mdi:thermometer"
 
-- name:                "CO2_VOC_2 [Humidity]"
-  unique_id:           "CO2_VOC_2_RH"
-  state_topic:         "dt/gf/CO2VOC/2/res"
-  value_template:      "{{ value_json['fields'].humidity }}"
+- name: "CO2/VOC Sensor 02 [Humidity]"
+  unique_id: "CO2_VOC_2_RH"
+  state_topic: "dt/gf/CO2VOC/2/res"
+  value_template: "{{ value_json['fields'].humidity }}"
   unit_of_measurement: "%[RH]"
-  icon:                "mdi:water-percent"
+  icon: "mdi:water-percent"
 
-- name:                "CO2_VOC_2 [CO2]"
-  unique_id:           "CO2_VOC_2_CO2"
-  state_topic:         "dt/gf/CO2VOC/2/res"
-  value_template:      "{{ value_json['fields'].co2 }}"
+- name: "CO2/VOC Sensor 02 [CO2]"
+  unique_id: "CO2_VOC_2_CO2"
+  state_topic: "dt/gf/CO2VOC/2/res"
+  value_template: "{{ value_json['fields'].co2 }}"
   unit_of_measurement: "ppm"
-  icon:                "mdi:smoke"
+  icon: "mdi:molecule-co2"
 
-- name:                "CO2_VOC_2 [Dewpoint]"
-  unique_id:           "CO2_VOC_2_DP"
-  state_topic:         "dt/gf/CO2VOC/2/res"
-  value_template:      "{{ value_json['fields'].dewpoint }}"
+- name: "CO2/VOC Sensor 02 [Dewpoint]"
+  unique_id: "CO2_VOC_2_DP"
+  state_topic: "dt/gf/CO2VOC/2/res"
+  value_template: "{{ value_json['fields'].dewpoint }}"
   unit_of_measurement: "°C"
-  icon:                "mdi:thermometer-water"
+  icon: "mdi:thermometer-water"
 
-- name:                "CO2_VOC_2 [Volume Flow]"
-  unique_id:           "CO2_VOC_2_VF"
-  state_topic:         "dt/gf/CO2VOC/2/res"
-  value_template:      "{{ value_json['fields'].volumeFlow }}"
+- name: "CO2/VOC Sensor 02 [Volume Flow]"
+  unique_id: "CO2_VOC_2_VF"
+  state_topic: "dt/gf/CO2VOC/2/res"
+  value_template: "{{ value_json['fields'].volumeFlow }}"
   unit_of_measurement: "m3/s"
-  icon:                "mdi:air-filter"
-# ───────────────────────────────────────────────────────────────────────────── #
+  icon: "mdi:air-filter"
 
-
-# ──────────────── STH01_1 [Temperature, Humidity & Dewpoint] ───────────────── #
-- name:                "STH01_1 [Temperature]"
-  unique_id:           "STH01_1_TEMP"
-  state_topic:         "dt/gf/STH01/1/res"
-  value_template:      "{{ value_json['fields'].temperature }}"
+# ─────────────── STH01_1 ─────────────── #
+- name: "STH Sensor 01 [Temperature]"
+  unique_id: "STH01_1_TEMP"
+  state_topic: "dt/gf/STH01/1/res"
+  value_template: "{{ value_json['fields'].temperature }}"
   unit_of_measurement: "°C"
-  icon:                "mdi:thermometer"
+  icon: "mdi:thermometer"
 
-- name:                "STH01_1 [Humidity]"
-  unique_id:           "STH01_1_RH"
-  state_topic:         "dt/gf/STH01/1/res"
-  value_template:      "{{ value_json['fields'].humidity }}"
+- name: "STH Sensor 01 [Humidity]"
+  unique_id: "STH01_1_RH"
+  state_topic: "dt/gf/STH01/1/res"
+  value_template: "{{ value_json['fields'].humidity }}"
   unit_of_measurement: "%[RH]"
-  icon:                "mdi:water-percent"
+  icon: "mdi:water-percent"
 
-- name:                "STH01_1 [Dewpoint]"
-  unique_id:           "STH01_1_DP"
-  state_topic:         "dt/gf/STH01/1/res"
-  value_template:      "{{ value_json['fields'].dewpoint }}"
+- name: "STH Sensor 01 [Dewpoint]"
+  unique_id: "STH01_1_DP"
+  state_topic: "dt/gf/STH01/1/res"
+  value_template: "{{ value_json['fields'].dewpoint }}"
   unit_of_measurement: "°C"
-  icon:                "mdi:thermometer-water"
-# ───────────────────────────────────────────────────────────────────────────── #
+  icon: "mdi:thermometer-water"
 
-
-# ───────────────── STH01_2 [Temperature, Humidity & Dewpoint] ──────────────── #
-- name:                "STH01_2 [Temperature]"
-  unique_id:           "STH01_2_TEMP"
-  state_topic:         "dt/gf/STH01/2/res"
-  value_template:      "{{ value_json['fields'].temperature }}"
+# ─────────────── STH01_2 ─────────────── #
+- name: "STH Sensor 02 [Temperature]"
+  unique_id: "STH01_2_TEMP"
+  state_topic: "dt/gf/STH01/2/res"
+  value_template: "{{ value_json['fields'].temperature }}"
   unit_of_measurement: "°C"
-  icon:                "mdi:thermometer"
+  icon: "mdi:thermometer"
 
-- name:                "STH01_2 [Humidity]"
-  unique_id:           "STH01_2_RH"
-  state_topic:         "dt/gf/STH01/2/res"
-  value_template:      "{{ value_json['fields'].humidity }}"
+- name: "STH Sensor 02 [Humidity]"
+  unique_id: "STH01_2_RH"
+  state_topic: "dt/gf/STH01/2/res"
+  value_template: "{{ value_json['fields'].humidity }}"
   unit_of_measurement: "%[RH]"
-  icon:                "mdi:water-percent"
+  icon: "mdi:water-percent"
 
-- name:                "STH01_2 [Dewpoint]"
-  unique_id:           "STH01_2_DP"
-  state_topic:         "dt/gf/STH01/2/res"
-  value_template:      "{{ value_json['fields'].dewpoint }}"
+- name: "STH Sensor 02 [Dewpoint]"
+  unique_id: "STH01_2_DP"
+  state_topic: "dt/gf/STH01/2/res"
+  value_template: "{{ value_json['fields'].dewpoint }}"
   unit_of_measurement: "°C"
-  icon:                "mdi:thermometer-water"
-# ───────────────────────────────────────────────────────────────────────────── #
+  icon: "mdi:thermometer-water"
 
-
-# ───────────────────────────── Dummy Control Signal ────────────────────────── #
-- name:                "Dummy Control Signal Temperature"
-  unique_id:           "GF_P_10"
-  state_topic:         "ha/desktop_gf/actuators/temperature"
-  value_template:      "{{ (value_json['control_signal'] | float) | round(2) }}"
+# ─────────────── Dummy Control Signal ─────────────── #
+- name: "Dummy Temperature Control Signal [Float]"
+  unique_id: "GF_P_10"
+  state_topic: "ha/desktop_gf/actuators/temperature"
+  value_template: "{{ (value_json['control_signal'] | float) | round(2) }}"
   unit_of_measurement: "[float]"
-  icon:                "mdi:heat-wave"
-# ───────────────────────────────────────────────────────────────────────────── #
+  icon: "mdi:heat-wave"
 
-
-# ──────────────────── S-YM-01 [Temperature & Leaf Wetness] ─────────────────── #
-- name:                "S-YM-01 [Temperature]"
-  unique_id:           "S-YM-01_TEMP"
-  state_topic:         "dt/gf/sym01/res"
-  value_template:      "{{ value_json['fields'].temperature }}"
+# ─────────────── S-YM-01 ─────────────── #
+- name: "S-YM-01 [Temperature]"
+  unique_id: "S-YM-01_TEMP"
+  state_topic: "dt/gf/sym01/res"
+  value_template: "{{ value_json['fields'].temperature }}"
   unit_of_measurement: "°C"
-  icon:                "mdi:thermometer"
+  icon: "mdi:thermometer"
 
-- name:                "S-YM-01 [Leaf Wetness]"
-  unique_id:           "S-YM-01_LEAF_WETNESS"
-  state_topic:         "dt/gf/sym01/res"
-  value_template:      "{{ value_json['fields'].wetness }}"
+- name: "S-YM-01 [Leaf Wetness]"
+  unique_id: "S-YM-01_LEAF_WETNESS"
+  state_topic: "dt/gf/sym01/res"
+  value_template: "{{ value_json['fields'].wetness }}"
   unit_of_measurement: "%[Leaf Wetness]"
-  icon:                "mdi:water-percent"
-# ───────────────────────────────────────────────────────────────────────────── #
+  icon: "mdi:leaf"
