--- a/kybfarm-docker-compose.yaml
+++ b/kybfarm-docker-compose.yaml
@@ -1,19 +1,26 @@
 services:
   requirements:
-    container_name: requirements 
-    build: server/src
-    
+    container_name: requirements
+    build: ./server/src
+    volumes:
+      - ./.env:/app/.env:ro
+      - ./server/src/config_templates:/app/templates
+      - ./server/homeassistant/config/include:/app/output/include
+      - ./server/appdaemon/config:/app/output/appdaemon
+      - ./server/mosquitto/config:/app/output/mosquitto
+    restart: "no"  # Optional: ensure it exits after generation
+
   homeassistant:
     container_name: homeassistant_kybfarm
     image: ghcr.io/home-assistant/home-assistant:stable
     volumes:
       - ./server/homeassistant/config:/config 
       - /etc/localtime:/etc/localtime:ro
-      - /run/dbus:/run/dbus:ro  # For bluetooth integration
+      - /run/dbus:/run/dbus:ro  # For Bluetooth
     restart: unless-stopped
     privileged: true
     ports:
-      - 8123:8123
+      - "8123:8123"
     depends_on:
       - requirements
       - influxdb
@@ -28,7 +35,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     restart: unless-stopped
     ports:
-      - 5050:5050
+      - "5050:5050"
     depends_on:
       - requirements
       - homeassistant
@@ -43,7 +50,7 @@ services:
       - ./server/influxdb/config:/etc/influxdb2
     restart: unless-stopped
     ports:
-      - 8086:8086
+      - "8086:8086"
     env_file:
       - .env
 
@@ -56,7 +63,7 @@ services:
       - ./server/mosquitto/log:/mosquitto/log
     restart: unless-stopped
     ports:
-      - 1883:1883
+      - "1883:1883"
     depends_on:
       - requirements
     env_file:
