--- a/server/homeassistant/config/include/Automations/PIDs.yaml
+++ b/server/homeassistant/config/include/Automations/PIDs.yaml
@@ -1,12 +1,13 @@
 # ┌────────────────────────────────────────────────────────────────────────────┐
 # │                         Home Assistant Automation Config                   │
-# │                         KYBFarm - PID Controller Loops                     │
+# │                      KYBFarm – PID Control Loop Triggers                  │
 # └────────────────────────────────────────────────────────────────────────────┘
 
-# ───────────────────────────── COOLING PID AUTOMATION ─────────────────────────── #
-- alias: "Cooling PID, enable/disable"
+
+# ─────────────────────────────── [Cooling PID] Loop ───────────────────────────── #
+- alias: "Cooling PID • Trigger"
   id: "cooling_pid_automation"
-  description: "Runs the cooling PID every 5 seconds if the toggle is ON"
+  description: "Triggers Cooling PID every 5s if toggle is enabled"
   trigger:
     - platform: time_pattern
       seconds: "/5"
@@ -23,12 +24,12 @@
         topic: "cmd/cooling_pid/req"
         payload: '{"cmd": "pid_enable"}'
   mode: single
-# ───────────────────────────────────────────────────────────────────────────── #
 
-# ───────────────────────────── HEATING PID AUTOMATION ─────────────────────────── #
-- alias: "Heating PID, enable/disable"
+
+# ─────────────────────────────── [Heating PID] Loop ───────────────────────────── #
+- alias: "Heating PID • Trigger"
   id: "heating_pid_automation"
-  description: "Runs the heating PID every 10 seconds if the toggle is ON"
+  description: "Triggers Heating PID every 10s if toggle is enabled"
   trigger:
     - platform: time_pattern
       seconds: "/10"
@@ -45,12 +46,12 @@
         topic: "cmd/heating_pid/req"
         payload: '{"cmd": "pid_enable"}'
   mode: single
-# ───────────────────────────────────────────────────────────────────────────── #
 
-# ────────────────────────────── CO2 PID AUTOMATION ────────────────────────────── #
-- alias: "CO2 PID, enable/disable"
+
+# ─────────────────────────────── [CO2 PID] Loop ──────────────────────────────── #
+- alias: "CO2 PID • Trigger"
   id: "co2_pid_automation"
-  description: "Runs the CO2 PID every 30 seconds if the toggle is ON"
+  description: "Triggers CO₂ PID every 30s if toggle is enabled"
   trigger:
     - platform: time_pattern
       seconds: "/30"
@@ -67,4 +68,3 @@
         topic: "cmd/co2_pid/req"
         payload: '{"cmd": "pid_enable"}'
   mode: single
-# ───────────────────────────────────────────────────────────────────────────── #
