--- a/server/homeassistant/config/include/Automations/sensor_calibrations.yaml
+++ b/server/homeassistant/config/include/Automations/sensor_calibrations.yaml
@@ -1,32 +1,12 @@
 # ┌────────────────────────────────────────────────────────────────────────────┐
-# │                       Home Assistant Sensor Calibrations                   │
-# │                 KYBFarm - MQTT Calibration Automation Scripts              │
+# │                     Sensor Calibration Automations - KYBFarm              │
+# │             EC Sensor Calibration [S-EC-01-1, S-EC-01-2] via MQTT          │
 # └────────────────────────────────────────────────────────────────────────────┘
 
-# ─────────────────────────────── TEMPLATE FORMAT ───────────────────────────── #
-# - alias: "Descriptive Calibration Step"
-#   trigger:
-#     - platform: state
-#       entity_id:
-#         - input_select.calibrate_sensor_id
-#       from: ...
-#       to: ...
-#   action:
-#     - service: input_text.set_value
-#       data:
-#         value: "Status message"
-#       target:
-#         entity_id: input_text.calibration_status
-#     - service: mqtt.publish
-#       data:
-#         topic: "cmd/topic"
-#         payload: '{"cmd": "...", "res_topic": "..."}'
-# ───────────────────────────────────────────────────────────────────────────── #
+# ──────────────── S-EC-01-1 [EC Sensor 1] ────────────────
 
-
-# ─────────────────────────── S-EC-01-1 [EC Sensor 1] ───────────────────────── #
-# ── 1413us/cm ── #
-- alias: "Initiate calibration for EC sensor 1 1413us/cm"
+# Initiate 1413us/cm
+- alias: "S-EC-01-1 • Initiate EC 1413us/cm"
   trigger:
     - platform: state
       entity_id: input_select.calibrate_s_ec_01_1
@@ -35,12 +15,13 @@
   action:
     - service: input_text.set_value
       data:
-        value: "Immerse probe in 1413us/cm, register calibration after a while."
+        value: "Immerse probe in 1413 µS/cm solution, then register calibration."
       target:
         entity_id: input_text.calibration_status
   mode: single
 
-- alias: "Register calibration for EC sensor 1 1413us/cm"
+# Register 1413us/cm
+- alias: "S-EC-01-1 • Register EC 1413us/cm"
   trigger:
     - platform: state
       entity_id: input_select.calibrate_s_ec_01_1
@@ -49,7 +30,7 @@
   action:
     - service: input_text.set_value
       data:
-        value: "Registered calibration for EC sensor 1 for 1413us/cm reference."
+        value: "Calibration registered for 1413 µS/cm."
       target:
         entity_id: input_text.calibration_status
     - service: mqtt.publish
@@ -58,23 +39,8 @@
         payload: '{"cmd": "calibrate_ec_1413", "res_topic": "dt/gf/sec01/1/res"}'
   mode: single
 
-# ── Return to Normal Operation ── #
-- alias: "Return to normal operation EC sensor 1"
-  trigger:
-    - platform: state
-      entity_id: input_select.calibrate_s_ec_01_1
-      from: "*"
-      to: "Normal Operation"
-  action:
-    - service: input_text.set_value
-      data:
-        value: "Sensor has returned to normal operation."
-      target:
-        entity_id: input_text.calibration_status
-  mode: single
-
-# ── 12880us/cm ── #
-- alias: "Initiate calibration for EC sensor 1 12880us/cm"
+# Initiate 12880us/cm
+- alias: "S-EC-01-1 • Initiate EC 12880us/cm"
   trigger:
     - platform: state
       entity_id: input_select.calibrate_s_ec_01_1
@@ -83,12 +49,13 @@
   action:
     - service: input_text.set_value
       data:
-        value: "Immerse probe in 12880us/cm, register calibration after a while."
+        value: "Immerse probe in 12880 µS/cm solution, then register calibration."
       target:
         entity_id: input_text.calibration_status
   mode: single
 
-- alias: "Register calibration for EC sensor 1 12880us/cm"
+# Register 12880us/cm
+- alias: "S-EC-01-1 • Register EC 12880us/cm"
   trigger:
     - platform: state
       entity_id: input_select.calibrate_s_ec_01_1
@@ -97,7 +64,7 @@
   action:
     - service: input_text.set_value
       data:
-        value: "Registered calibration for EC sensor 1 for 12880us/cm reference."
+        value: "Calibration registered for 12880 µS/cm."
       target:
         entity_id: input_text.calibration_status
     - service: mqtt.publish
@@ -105,12 +72,27 @@
         topic: "cmd/sec01/1/req"
         payload: '{"cmd": "calibrate_ec_12880", "res_topic": "dt/gf/sec01/1/res"}'
   mode: single
-# ───────────────────────────────────────────────────────────────────────────── #
+
+# Return to Normal
+- alias: "S-EC-01-1 • Return to Normal"
+  trigger:
+    - platform: state
+      entity_id: input_select.calibrate_s_ec_01_1
+      from: "*"
+      to: "Normal Operation"
+  action:
+    - service: input_text.set_value
+      data:
+        value: "S-EC-01-1 back to normal operation."
+      target:
+        entity_id: input_text.calibration_status
+  mode: single
 
 
-# ─────────────────────────── S-EC-01-2 [EC Sensor 2] ───────────────────────── #
-# ── 1413us/cm ── #
-- alias: "Initiate calibration for EC sensor 2 1413us/cm"
+# ──────────────── S-EC-01-2 [EC Sensor 2] ────────────────
+
+# Initiate 1413us/cm
+- alias: "S-EC-01-2 • Initiate EC 1413us/cm"
   trigger:
     - platform: state
       entity_id: input_select.calibrate_s_ec_01_2
@@ -119,12 +101,13 @@
   action:
     - service: input_text.set_value
       data:
-        value: "Immerse probe in 1413us/cm, register calibration after a while."
+        value: "Immerse probe in 1413 µS/cm solution, then register calibration."
       target:
         entity_id: input_text.calibration_status
   mode: single
 
-- alias: "Register calibration for EC sensor 2 1413us/cm"
+# Register 1413us/cm
+- alias: "S-EC-01-2 • Register EC 1413us/cm"
   trigger:
     - platform: state
       entity_id: input_select.calibrate_s_ec_01_2
@@ -133,7 +116,7 @@
   action:
     - service: input_text.set_value
       data:
-        value: "Registered calibration for EC sensor 2 for 1413us/cm reference."
+        value: "Calibration registered for 1413 µS/cm."
       target:
         entity_id: input_text.calibration_status
     - service: mqtt.publish
@@ -142,24 +125,8 @@
         payload: '{"cmd": "calibrate_ec_1413", "res_topic": "dt/gf/sec01/2/res"}'
   mode: single
 
-# ── Return to normal operation ── #
-- alias: "Return to normal operation EC sensor 2"
-  trigger:
-    - platform: state
-      entity_id: input_select.calibrate_s_ec_01_2
-      from: "*"
-      to: "Normal Operation"
-  action:
-    - service: input_text.set_value
-      data:
-        value: "Sensor has returned to normal operation."
-      target:
-        entity_id: input_text.calibration_status
-  mode: single
-
-
-# ── 12880us/cm ── #
-- alias: "Initiate calibration for EC sensor 2 12880us/cm"
+# Initiate 12880us/cm
+- alias: "S-EC-01-2 • Initiate EC 12880us/cm"
   trigger:
     - platform: state
       entity_id: input_select.calibrate_s_ec_01_2
@@ -168,12 +135,13 @@
   action:
     - service: input_text.set_value
       data:
-        value: "Immerse probe in 12880us/cm, register calibration after a while."
+        value: "Immerse probe in 12880 µS/cm solution, then register calibration."
       target:
         entity_id: input_text.calibration_status
   mode: single
 
-- alias: "Register calibration for EC sensor 2 12880us/cm"
+# Register 12880us/cm
+- alias: "S-EC-01-2 • Register EC 12880us/cm"
   trigger:
     - platform: state
       entity_id: input_select.calibrate_s_ec_01_2
@@ -182,7 +150,7 @@
   action:
     - service: input_text.set_value
       data:
-        value: "Registered calibration for EC sensor 2 for 12880us/cm reference."
+        value: "Calibration registered for 12880 µS/cm."
       target:
         entity_id: input_text.calibration_status
     - service: mqtt.publish
@@ -190,239 +158,243 @@
         topic: "cmd/sec01/2/req"
         payload: '{"cmd": "calibrate_ec_12880", "res_topic": "dt/gf/sec01/2/res"}'
   mode: single
-# ───────────────────────────────────────────────────────────────────────────── #
 
+# Return to Normal
+- alias: "S-EC-01-2 • Return to Normal"
+  trigger:
+    - platform: state
+      entity_id: input_select.calibrate_s_ec_01_2
+      from: "*"
+      to: "Normal Operation"
+  action:
+    - service: input_text.set_value
+      data:
+        value: "S-EC-01-2 back to normal operation."
+      target:
+        entity_id: input_text.calibration_status
+  mode: single
 
-# ────────────────────────────── S-PH-01-1 [pH Sensor 1] ────────────────────── #
+# ──────────────── S-PH-01-1 [pH Sensor 1] ────────────────
 
-# ── 4.01pH ── #
-- alias: "Initiate calibration for pH sensor 1 (4.01pH)"
+# Initiate 4.01pH
+- alias: "S-PH-01-1 • Initiate pH 4.01"
   trigger:
     - platform: state
       entity_id: input_select.calibrate_s_ph_01_1
       from: null
-      to: Initiate calibration for pH 4.01
+      to: "Initiate calibration for pH 4.01"
   action:
     - service: input_text.set_value
       data:
-        value: Immerse probe in pH 4.01, register calibration after a while.
+        value: "Immerse probe in pH 4.01, then register calibration."
       target:
         entity_id: input_text.calibration_status
 
-- alias: "Register calibration for pH sensor 1 (4.01pH)"
+# Register 4.01pH
+- alias: "S-PH-01-1 • Register pH 4.01"
   trigger:
     - platform: state
       entity_id: input_select.calibrate_s_ph_01_1
       from: null
-      to: Register calibration for pH 4.01
+      to: "Register calibration for pH 4.01"
   action:
     - service: input_text.set_value
       data:
-        value: Registered calibration for pH sensor 1 for 4.01pH reference.
+        value: "Calibration registered for pH 4.01."
       target:
         entity_id: input_text.calibration_status
     - service: mqtt.publish
       data:
-        qos: 0
-        retain: false
         topic: "cmd/sph01/1/req"
         payload: '{ "cmd": "calibrate_ph_0401", "res_topic": "dt/gf/sph01/1/res"}'
 
-# ── Return to Normal Operation ── #
-- alias: "Return to normal operation pH sensor 1"
+# Initiate 7.00pH
+- alias: "S-PH-01-1 • Initiate pH 7.00"
   trigger:
     - platform: state
       entity_id: input_select.calibrate_s_ph_01_1
       from: null
-      to: Normal Operation
+      to: "Initiate calibration for pH 7.00"
   action:
     - service: input_text.set_value
       data:
-        value: Sensor has returned to normal operation.
+        value: "Immerse probe in pH 7.00, then register calibration."
       target:
         entity_id: input_text.calibration_status
 
-# ── 7.00pH ── #
-- alias: "Initiate calibration for pH sensor 1 (7.00pH)"
+# Register 7.00pH
+- alias: "S-PH-01-1 • Register pH 7.00"
   trigger:
     - platform: state
       entity_id: input_select.calibrate_s_ph_01_1
       from: null
-      to: Initiate calibration for pH 7.00
+      to: "Register calibration for pH 7.00"
   action:
     - service: input_text.set_value
       data:
-        value: Immerse probe in pH 7.00, register calibration after a while.
-      target:
-        entity_id: input_text.calibration_status
-
-- alias: "Register calibration for pH sensor 1 (7.00pH)"
-  trigger:
-    - platform: state
-      entity_id: input_select.calibrate_s_ph_01_1
-      from: null
-      to: Register calibration for pH 7.00
-  action:
-    - service: input_text.set_value
-      data:
-        value: Registered calibration for pH sensor 1 for 7.00pH reference.
+        value: "Calibration registered for pH 7.00."
       target:
         entity_id: input_text.calibration_status
     - service: mqtt.publish
       data:
-        qos: 0
-        retain: false
         topic: "cmd/sph01/1/req"
         payload: '{ "cmd": "calibrate_ph_0700", "res_topic": "dt/gf/sph01/1/res"}'
 
-# ── 10.01pH ── #
-- alias: "Initiate calibration for pH sensor 1 (10.01pH)"
+# Initiate 10.01pH
+- alias: "S-PH-01-1 • Initiate pH 10.01"
   trigger:
     - platform: state
       entity_id: input_select.calibrate_s_ph_01_1
       from: null
-      to: Initiate calibration for pH 10.01
+      to: "Initiate calibration for pH 10.01"
   action:
     - service: input_text.set_value
       data:
-        value: Immerse probe in pH 10.01, register calibration after a while.
+        value: "Immerse probe in pH 10.01, then register calibration."
       target:
         entity_id: input_text.calibration_status
 
-- alias: "Register calibration for pH sensor 1 (10.01pH)"
+# Register 10.01pH
+- alias: "S-PH-01-1 • Register pH 10.01"
   trigger:
     - platform: state
       entity_id: input_select.calibrate_s_ph_01_1
       from: null
-      to: Register calibration for pH 10.01
+      to: "Register calibration for pH 10.01"
   action:
     - service: input_text.set_value
       data:
-        value: Registered calibration for pH sensor 1 for 10.01pH reference.
+        value: "Calibration registered for pH 10.01."
       target:
         entity_id: input_text.calibration_status
     - service: mqtt.publish
       data:
-        qos: 0
-        retain: false
         topic: "cmd/sph01/1/req"
         payload: '{ "cmd": "calibrate_ph_1001", "res_topic": "dt/gf/sph01/1/res"}'
-# ───────────────────────────────────────────────────────────────────────────── #
 
-
-# ────────────────────────────── S-PH-01-2 [pH Sensor 2] ────────────────────── #
-
-# ── 4.01pH ── #
-- alias: "Initiate calibration for pH sensor 2 (4.01pH)"
+# Return to Normal
+- alias: "S-PH-01-1 • Return to Normal"
   trigger:
     - platform: state
-      entity_id: input_select.calibrate_s_ph_01_2
+      entity_id: input_select.calibrate_s_ph_01_1
       from: null
-      to: Initiate calibration for pH 4.01
+      to: "Normal Operation"
   action:
     - service: input_text.set_value
       data:
-        value: Immerse probe in pH 4.01, register calibration after a while.
+        value: "S-PH-01-1 back to normal operation."
       target:
         entity_id: input_text.calibration_status
 
-- alias: "Register calibration for pH sensor 2 (4.01pH)"
+
+# ──────────────── S-PH-01-2 [pH Sensor 2] ────────────────
+
+# Initiate 4.01pH
+- alias: "S-PH-01-2 • Initiate pH 4.01"
   trigger:
     - platform: state
       entity_id: input_select.calibrate_s_ph_01_2
       from: null
-      to: Register calibration for pH 4.01
+      to: "Initiate calibration for pH 4.01"
   action:
     - service: input_text.set_value
       data:
-        value: Registered calibration for pH sensor 2 for 4.01pH reference.
+        value: "Immerse probe in pH 4.01, then register calibration."
+      target:
+        entity_id: input_text.calibration_status
+
+# Register 4.01pH
+- alias: "S-PH-01-2 • Register pH 4.01"
+  trigger:
+    - platform: state
+      entity_id: input_select.calibrate_s_ph_01_2
+      from: null
+      to: "Register calibration for pH 4.01"
+  action:
+    - service: input_text.set_value
+      data:
+        value: "Calibration registered for pH 4.01."
       target:
         entity_id: input_text.calibration_status
     - service: mqtt.publish
       data:
-        qos: 0
-        retain: false
         topic: "cmd/sph01/2/req"
         payload: '{ "cmd": "calibrate_ph_0401", "res_topic": "dt/gf/sph01/2/res"}'
 
-# ── Return to Normal Operation ── #
-- alias: "Return to normal operation pH sensor 2"
+# Initiate 7.00pH
+- alias: "S-PH-01-2 • Initiate pH 7.00"
   trigger:
     - platform: state
       entity_id: input_select.calibrate_s_ph_01_2
       from: null
-      to: Normal Operation
+      to: "Initiate calibration for pH 7.00"
   action:
     - service: input_text.set_value
       data:
-        value: Sensor has returned to normal operation.
+        value: "Immerse probe in pH 7.00, then register calibration."
       target:
         entity_id: input_text.calibration_status
 
-# ── 7.00pH ── #
-- alias: "Initiate calibration for pH sensor 2 (7.00pH)"
+# Register 7.00pH
+- alias: "S-PH-01-2 • Register pH 7.00"
   trigger:
     - platform: state
       entity_id: input_select.calibrate_s_ph_01_2
       from: null
-      to: Initiate calibration for pH 7.00
+      to: "Register calibration for pH 7.00"
   action:
     - service: input_text.set_value
       data:
-        value: Immerse probe in pH 7.00, register calibration after a while.
-      target:
-        entity_id: input_text.calibration_status
-
-- alias: "Register calibration for pH sensor 2 (7.00pH)"
-  trigger:
-    - platform: state
-      entity_id: input_select.calibrate_s_ph_01_2
-      from: null
-      to: Register calibration for pH 7.00
-  action:
-    - service: input_text.set_value
-      data:
-        value: Registered calibration for pH sensor 2 for 7.00pH reference.
+        value: "Calibration registered for pH 7.00."
       target:
         entity_id: input_text.calibration_status
     - service: mqtt.publish
       data:
-        qos: 0
-        retain: false
         topic: "cmd/sph01/2/req"
         payload: '{ "cmd": "calibrate_ph_0700", "res_topic": "dt/gf/sph01/2/res"}'
 
-# ── 10.01pH ── #
-- alias: "Initiate calibration for pH sensor 2 (10.01pH)"
+# Initiate 10.01pH
+- alias: "S-PH-01-2 • Initiate pH 10.01"
   trigger:
     - platform: state
       entity_id: input_select.calibrate_s_ph_01_2
       from: null
-      to: Initiate calibration for pH 10.01
+      to: "Initiate calibration for pH 10.01"
   action:
     - service: input_text.set_value
       data:
-        value: Immerse probe in pH 10.01, register calibration after a while.
+        value: "Immerse probe in pH 10.01, then register calibration."
       target:
         entity_id: input_text.calibration_status
 
-- alias: "Register calibration for pH sensor 2 (10.01pH)"
+# Register 10.01pH
+- alias: "S-PH-01-2 • Register pH 10.01"
   trigger:
     - platform: state
       entity_id: input_select.calibrate_s_ph_01_2
       from: null
-      to: Register calibration for pH 10.01
+      to: "Register calibration for pH 10.01"
   action:
     - service: input_text.set_value
       data:
-        value: Registered calibration for pH sensor 2 for 10.01pH reference.
+        value: "Calibration registered for pH 10.01."
       target:
         entity_id: input_text.calibration_status
     - service: mqtt.publish
       data:
-        qos: 0
-        retain: false
         topic: "cmd/sph01/2/req"
         payload: '{ "cmd": "calibrate_ph_1001", "res_topic": "dt/gf/sph01/2/res"}'
 
-# ───────────────────────────────────────────────────────────────────────────── #
+# Return to Normal
+- alias: "S-PH-01-2 • Return to Normal"
+  trigger:
+    - platform: state
+      entity_id: input_select.calibrate_s_ph_01_2
+      from: null
+      to: "Normal Operation"
+  action:
+    - service: input_text.set_value
+      data:
+        value: "S-PH-01-2 back to normal operation."
+      target:
+        entity_id: input_text.calibration_status
